--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.CatagoryOneActivity"
             android:screenOrientation="portrait"
@@ -60,9 +60,7 @@
             android:name=".activity.ImagePagerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide" />
-        <activity android:name=".activity.WelcomeActivity">
-
-        </activity>
+        <activity android:name=".activity.WelcomeActivity"></activity>
         <activity android:name=".activity.WelcomeTwoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,6 +68,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.VoltageActivity"></activity>
     </application>
 
 </manifest>
