--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+
+        // Move the tests to tests/java, tests/res, etc...
+        instrumentTest.setRoot('tests')
+
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
+    }
 }
 
 dependencies {
@@ -26,5 +43,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile files('libs/afinal_0.5_bin.jar')
     compile files('libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar')
-
+    compile files('libs/AMap_Location_V3.4.0_20170427.jar')
+    compile files('libs/AMap_Search_V5.1.0_20170517.jar')
+    compile files('libs/Android_Map3D_SDK_V5.2.0_20170602.jar')
 }
