--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile files('libs/AMap_Location_V3.4.0_20170427.jar')
     compile files('libs/AMap_Search_V5.1.0_20170517.jar')
     compile files('libs/Android_Map3D_SDK_V5.2.0_20170602.jar')
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
 }
